# What2Eat

./: .gitignore  FIREBASE_SETUP.md  KakaoMapAPI.py  Makefile  ModularizationTest.ipynb  ONBOARDING_GUIDE.md  README.md  Streamlit_main.py  Streamlit_main_busan.py  Streamlit_main_daegu.py  Streamlit_main_sokcho.py  WhatToEat_DB_raw.csv  app_2sheet_v23.04.16.py  current_packages.txt  env.example  json_to_toml_converter.py  pyproject.toml  requirements.txt  test_separated_data.py  what2eat_chat_bot_streamlit_main.py  ~$whatToEat_DB_test.xlsx
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.streamlit/: config.toml
OldKakaoRok/: OldCrawler.py  OldCrawler_notebook.ipynb  app.py  app_2sheet_v23.04.01.py  csv_refactoring.ipynb  matki_DB.xlsx  style.css
awesome_package/: __init__.py  module.py
data/: zone_info.json
data/model_data/: .gitattributes  svd_algo.pkl
data/seoul_data/: category_table.csv
new_crawler/: selenium&curl_requests_crawler.ipynb
old_versions/: what2eat_chat_bot_streamlit_main.py
old_versions/OldKakaoRok/: OldCrawler_notebook.ipynb  app.py  csv_refactoring.ipynb
research/: chat_bot_streamlit_main.py  find_xy_from_address.ipynb  wellness_dataset.csv
research/data/: 정용진 부회장 추천 전국맛집 취합종합본.xlsx
seoul_data/: diner_df_서울특별시송파구.csv  review_df_경기도과천시.csv  whatToEat_DB_busan.xlsx  whatToEat_DB_daegu.xlsx  whatToEat_DB_gangwon.xlsx  whatToEat_DB_socho.xlsx  whatToEat_DB_socho_extra.xlsx  whatToEat_DB_socho_extra_raw.xlsx
src/: main.py  main_legacy.py  search_test_main.py  streamlit_test.py  test_onboarding.py
src/.streamlit/: config.toml  secrets.toml
src/config/: constants.py  firebase_config.py
src/pages/: __init__.py  chat_page.py  my_page.py  onboarding.py  ranking_page.py  search_filter_page.py  search_map_page.py  worldcup_page.py
src/utils/: __init__.py  activity_logger.py  analytics.py  api.py  api_client.py  api_data_loader.py  app.py  auth.py  auth_reference.py  category_manager.py  data_loading.py  data_processing.py  data_separator.py  dialogs.py  firebase_logger.py  folium_map_utils.py  geolocation.py  map_renderer.py  my_page_helpers.py  onboarding.py  pages.py  search_engine.py  search_filter.py  search_manager.py  session_manager.py  session_state.py  similar_restaurants.py  ui_components.py  worldcup.py
