[project]
name = "what2eat"
version = "0.1.0"
description = "What2Eat - 맛집 추천 서비스"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "What2Eat Team" }
]
keywords = ["streamlit", "restaurant", "recommendation", "food"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "pydeck>=0.8.0",
    "numpy>=1.24.0",
    "streamlit-folium>=0.7.0",
    "fake-useragent>=1.1.3",
    "undetected-chromedriver>=3.4.6",
    "tqdm>=4.64.0",
    "requests>=2.32.0",
    "requests-oauthlib>=2.0.0",
    "openpyxl>=3.1.0",
    "branca>=0.6.0",
    "geopy>=2.3.0",
    "sentence-transformers>=2.2.0",
    "streamlit-chat>=0.1.1",
    "scikit-learn>=1.3.0",
    "streamlit-geolocation>=0.0.10",
    "surprise>=0.1",
    "matplotlib>=3.7.0",
    "firebase-admin>=6.8.0",
    "google-cloud-firestore>=2.19.0",
    "google-cloud-storage>=3.1.0",
    "cryptography>=45.0.0",
    "pyjwt[crypto]>=2.5.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "fuzzywuzzy>=0.18.0",
    "jamo>=0.4.1",
    "python-levenshtein>=0.27.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/what2eat"
Repository = "https://github.com/your-username/what2eat"
Issues = "https://github.com/your-username/what2eat/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 
