[project]
name = "what2eat"
version = "0.1.0"
description = "What2Eat - 맛집 추천 서비스"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "What2Eat Team" }
]
keywords = ["streamlit", "restaurant", "recommendation", "food"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "pydeck>=0.8.0",
    "numpy>=1.24.0",
    "streamlit-folium>=0.7.0",
    "fake-useragent>=1.1.3",
    "undetected-chromedriver>=3.4.6",
    "tqdm>=4.64.0",
    "requests>=2.32.0",
    "requests-oauthlib>=2.0.0",
    "openpyxl>=3.1.0",
    "branca>=0.6.0",
    "geopy>=2.3.0",
    "sentence-transformers>=2.2.0",
    "streamlit-chat>=0.1.1",
    "scikit-learn>=1.3.0",
    "streamlit-geolocation>=0.0.10",
    "surprise>=0.1",
    "matplotlib>=3.7.0",
    "firebase-admin>=6.8.0",
    "google-cloud-firestore>=2.19.0",
    "google-cloud-storage>=3.1.0",
    "cryptography>=45.0.0",
    "pyjwt[crypto]>=2.5.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "fuzzywuzzy>=0.18.0",
    "jamo>=0.4.1",
    "python-levenshtein>=0.27.1",
    "extra-streamlit-components>=0.1.0",
    "httpx>=0.27.0",
    "watchdog>=6.0.0",
    "ruff==0.9.9",
    "google-generativeai==0.8.5",

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/what2eat"
Repository = "https://github.com/your-username/what2eat"
Issues = "https://github.com/your-username/what2eat/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]


[tool.ruff]
# Refer https://github.com/astral-sh/ruff?tab=readme-ov-file#configuration
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
lint.select = ["E4", "E7", "E9", "F", "I", "UP006"]
lint.ignore = ["E722", "F403", "F405", "E501"]

# Allow fix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Like Black, use double quotes for strings.
format.quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
format.indent-style = "space"

# Like Black, respect magic trailing commas.
format.skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
format.line-ending = "auto"

# isort 설정
[tool.ruff.lint.isort]
known-first-party = ["app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
